# ASAB_Helge-Stein-Group

./: .gitignore  InfoGeneral.txt  InfoRequirements_txt.txt  LICENSE  README.md  __init__.py  calcComp.py  chemList.pck  config.json  flush_routine.py  helpers.py  main.py  pump_binary_mixture.py  setup.cfg  setup.py  test_pump_accuracy.py
ASAB/: __init__.py
ASAB/action/: CetoniDevice_action.py  balance_action.py  densioVisco_action.py
ASAB/configuration/: config.py  default_config.py
ASAB/driver/: CetoniDevice_driver.py  balance_driver.py
ASAB/server/: CetoniDevice_server_sim.py  densioVisco_server.py  densioVisco_server_sim.py  initASAB_SWenv.py
ASAB/test/: testCalcComp.py  test_CetoniDevice_action.py  test_CetoniDevice_driver.py  test_balance_action.py  (+4 more)
analysis/: evaluation_diffusion.py  nmr_evaluation.py  nmr_evaluation_convert+import_pickle.py
driver/: CetoniDevice_driver.py
evaluation/: evaluation_diffusion.py  nmr_evaluation.py  nmr_evaluation_convert+import_pickle.py
experiment/: SystemStatus.py  __init__.py  calcComp.py  chemicals.py  main.py  newfile.py  testCalcComp.py
hardware/: CetoniDevice.py  __init__.py  bruteForceCleaning.py  bruteForceCleaning_air.py  edges.csv  graph.py  syringes.py  tubing.csv  valvePositionDict.pck
server/: CetoniDevice_server.py  CetoniDevice_server_sim.py  densioVisco_server.py  densioVisco_server_sim.py
tests/: __init__.py  testCalcComp.py  testChemicals.py  testGraph.py  testHelpers.py  testSystemStatus.py  test_CetoniDevice_action.py  test_graph.py  test_save
utility/: helpers.py  syringes.py
(+127 files in other folders)
