# According to https://packaging.python.org/en/latest/tutorials/packaging-projects/
[metadata]
name = ASAB
version = 0.1.0
description = This package controls the ASAB setup including all attached devices.
long_description = file: README.md
license = MIT

[options]
package_dir =
    = src
packages = find:
install_requires =
    fastapi
    matplotlib
    networkx
    numpy
    pandas
    pyserial
    tqdm
    uvicorn
python_requires = >=3.9

[options.packages.find]
where = src