# According to https://packaging.python.org/en/latest/tutorials/packaging-projects/
[metadata]
name = ASAB
version = 2.0.1
description = This package controls the ASAB setup including all attached devices.
long_description = file: README.md
license = MIT

[options]
package_dir =
    = src
packages = find:
install_requires =
    clr
    fastapi
    matplotlib
    networkx
    numpy
    pandas
    pyserial
    pytest
    scipy
    uvicorn
python_requires = >=3.9

[options.packages.find]
where = src